# personal_finance_tracker_api

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: Dockerfile  env.py
alembic/versions/: 2025_12_18_1007-d7b7c6f5f55f_initial_migration.py
application/: main.py
application/api/: health.py
application/api/dependencies/: get_user.py  transactions.py
application/api/handlers/: transactions.py  users.py
application/api/routers/auth/: login.py  logout.py  register.py
application/api/routers/transactions/: transactions.py
application/core/: config.py  jwt_generation.py  password.py
application/database/: __init__.py  base.py
application/database/models/: categories.py  tokens.py  transactions.py  users.py
application/schemas/: pagination.py  transactions.py  users.py
features/: pagination_enum.py  transaction_enum.py
